<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.10">
  <DUT Name="ST_TableRow" Id="{633f5506-1602-4df2-9020-300d7555a6b4}">
    <Declaration><![CDATA[TYPE ST_TableRow :
STRUCT
    fEnergy : LREAL;
    fLow  : LREAL;
    fHigh : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>